# Docker.pt-nexus

./: Dockerfile  readme.md  start-services.sh
server/: .gitignore  app.py  config.py  database.py  pyproject.toml  requirements.txt  sites_data.json
server/api/: routes_auth.py  routes_config.py  routes_cross_seed_data.py  routes_go_proxy.py  routes_local_query.py  routes_management.py  routes_migrate.py  routes_sites.py  routes_stats.py  routes_torrents.py
server/configs/: 13city.yaml  agsv.yaml  carpt.yaml  cbg.yaml  chdbits.yaml  crabpt.yaml  cspt.yaml  dubhe.yaml  global_mappings.yaml  gtkpw.yaml  haidan.yaml  hdarea.yaml  hddolby.yaml  hdkyl.yaml  hdtime.yaml  ilolicon.yaml  kufei.yaml  lajidui.yaml  lemonhd.yaml  longpt.yaml  luckpt.yaml  march.yaml  muxuege.yaml  novahd.yaml  pandapt.yaml  pt0ffcc.yaml  ptcafe.yaml  ptchina.yaml  ptlover.yaml  ptvicomo.yaml  ptzone.yaml  qingwapt.yaml  raingfh.yaml  sewerpt.yaml  ssd.yaml  sunny.yaml  tangpt.yaml  ubits.yaml  upxin.yaml  xingyunge.yaml  (+3 more)
server/core/: downloader_queue.py  iyuu.py  migrator.py  services.py
server/core/downloaders/: __init__.py  base_downloader.py
server/core/downloaders/sites/: __init__.py  haidan.py
server/core/extractors/: extractor.py
server/core/extractors/sites/: ssd.py  (+2 more)
server/core/migrations/: migrate_downloader_ids.py
server/core/uploaders/: fallback_manager.py  uploader.py
server/models/: seed_parameter.py
server/utils/: __init__.py  completion_checker.py  description_enhancer.py  downloader_id_helper.py  formatters.py  image_validator.py  log_streamer.py  media_helper.py
(+60 files in other folders)
